--- a/main.css
+++ b/main.css
@@ -7,4 +7,26 @@
 
 body {
     font-family: 'Nerko One', cursive;
+    background: dodgerblue;
+}
+
+/* UTILITIES */
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+/*HEADER */
+
+header {
+    text-align: center;
+    /*margin-bottom: 10px;*/
+}
+
+header h1 {
+    color: white;
+    transform: uppercase;
+    font-size: 100px;
+    text-shadow: 2px 2px black;
 }
