--- a/main.css
+++ b/main.css
@@ -62,6 +62,169 @@ header h1 {
     display: none;
 }
 
+.cards {
+    position: relative;
+}
+
+.cards .text {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 60px;
+    top: 170px;
+    font-size: 25px;
+}
+
+.cards .text2 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 278px;
+    top: 175px;
+    font-size: 25px;
+}
+
+.cards .text3 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 540px;
+    top: 170px;
+    font-size: 25px;
+}
+
+.cards .text4 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 752px;
+    top: 175px;
+    font-size: 25px;
+}
+
+.cards .text5 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 34px;
+    top: 435px;
+    font-size: 25px;
+}
+
+.cards .text6 {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 329px;
+    top: 472px;
+    font-size: 20px;
+    color: purple;
+}
+
+.cards .text7 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 510px;
+    top: 434px;
+    font-size: 25px;
+}
+
+.cards .text8 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 775px;
+    top: 444px;
+    font-size: 25px;
+}
+
+.cards .text9 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 68px;
+    top: 702px;
+    font-size: 25px;
+}
+
+.cards .text10 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 291px;
+    top: 714px;
+    font-size: 25px;
+}
+
+.cards .text11 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 549px;
+    top: 697px;
+    font-size: 25px;
+}
+
+.cards .text12 {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    left: 810px;
+    top: 741px;
+    font-size: 20px;
+}
+.cards:hover .text,
+.cards:hover .text2,
+.cards:hover .text3,
+.cards:hover .text4,
+.cards:hover .text5,
+.cards:hover .text7,
+.cards:hover .text8,
+.cards:hover .text9,
+.cards:hover .text10,
+.cards:hover .text11,
+.cards:hover .text12{
+    display: block;
+    color: orange;
+}
+
 .cards:hover .imagine2,
 .cards:hover .imagine3,
 .cards:hover .imagine4,
@@ -69,4 +232,11 @@ header h1 {
 .cards:hover .imagine6,
 .cards:hover .imagine7 {
     display: block;
+}
+
+footer {
+    text-align: center;
+    color: black;
+    margin: 70px;
+    font-size: 20px;
 }
